// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with a caret on the right if update is allowed 1`] = `
<span
  aria-label="tags_list_x.foo, bar"
  className="tags-list"
  role="note"
>
  <TagsIcon
    className="text-middle"
  />
  <span
    aria-hidden={true}
    className="text-ellipsis text-middle"
    title="foo, bar"
  >
    foo, bar
  </span>
  <DropdownIcon
    className="text-middle"
  />
</span>
`;

exports[`should render with a list of tag 1`] = `
<span
  aria-label="tags_list_x.foo, bar"
  className="tags-list"
  role="note"
>
  <TagsIcon
    className="text-middle"
  />
  <span
    aria-hidden={true}
    className="text-ellipsis text-middle"
    title="foo, bar"
  >
    foo, bar
  </span>
</span>
`;
